# offik

./: .env  .gitignore  Makefile  README.md  main.go  setup.cfg  setup.py
.github/workflows/: build.yml
include/: arena.h  defs.h  game.h  main.h  types.h
pysrc/offik/: __main__.py  arena.py  ctypes.py  defs.py  game.py
pysrc/offik/assets/: images.json  labels.json  manager.py
pysrc/offik/boards/: load.py  loading.py  menu.py  options.py  player.py  quit.py  setupb.py  standard.py  welcome.py
pysrc/offik/callbacks/: anim.py
pysrc/offik/core/: config.py  ctypes.py  door.py  primi.py
pysrc/offik/events/: loading.py  manager.py  menu.py  quit.py  welcome.py
pysrc/offik/objects/: images.py  labels.py  primi.py
pysrc/offik/timers/: loading.py  welcome.py
pytests/: test_ctypes.py
src/: arena.cc  main.cc
